# openstack-pomerium-nova-reconciler

./: .dockerignore  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-artifacts.yml
deploy/systemd/: openstack-teleport-reconciler.service
docker/: Dockerfile
docs/: architecture.md  implementation-plan.md
examples/: snapshot.json
src/mustelinet_reconciler/: __init__.py  __main__.py
src/mustelinet_reconciler/application/ports/: instance_repository.py  oidc_connector_repository.py  pomerium_route_repository.py  project_repository.py  teleport_node_repository.py  teleport_role_repository.py
src/mustelinet_reconciler/application/services/: reconciliation_service.py
src/mustelinet_reconciler/config/: __init__.py  loader.py  settings.py
src/mustelinet_reconciler/domain/: __init__.py
src/mustelinet_reconciler/domain/models/: openstack.py  pomerium.py  reconciliation_plan.py  teleport.py
src/mustelinet_reconciler/domain/services/: naming.py  node_builder.py  reconciliation_planner.py  role_builder.py  route_builder.py
src/mustelinet_reconciler/endpoints/: __init__.py  cli.py  worker.py
src/mustelinet_reconciler/infrastructure/: memory.py  snapshot.py
src/mustelinet_reconciler/infrastructure/openstack/: __init__.py  connection_factory.py  keystone_project_repository.py  (+1 more)
teleport-helper/: go.mod  go.sum
teleport-helper/cmd/mustelinet-teleport-helper/: main.go  main_test.go
tests/integration/: test_reconciliation_service_with_fakes.py
tests/unit/: test_config_loader.py  test_json_node_repository.py  test_pomerium_route_repositories.py  test_reconciliation_planner.py  test_teleport_helper_repository.py
(+6 files in other folders)
